<resources>
    <string name="app_name">GradeTrak</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_modules">Modules</string>
    <string name="title_insights">Insights</string>
    <string name="title_settings">Settings</string>
    <string name="copyright">\u00A9 GradeTrak 2021</string>
    <string name="splash_hook_line">Tracking Your Future</string>

    <!-- Home Page Strings -->
    <string name="recycler_view_level_five_title">Level 5 Modules</string>
    <string name="recycler_view_level_six_title">Level 6 Modules</string>
    <string name="recycler_view_description_placeholder">Module Description</string>
    <string name="recycler_view_result_placeholder">96%</string>
    <string name="recycler_view_percentage">%</string>
    <string name="recycler_view_image_view_description">Edit</string>
    <string name="recycler_view_layout_image_view_description">Module Image</string>
    <string name="recycler_view_module_credits">Credits:</string>
    <string name="recycler_view_module_level">Level:</string>
    <string name="recycler_view_module_result">Result:</string>
    <string name="recycler_view_not_available">N/A</string>
    <string name="select_a_module">Please select a module</string>

    <!-- Enrol Page Strings -->
    <string name="enrol_page_modules_recycler_title">Enrolled Modules</string>
    <string name="enrol_page_delete_button_text">Delete</string>
    <string name="enrol_page_edit_button_text">Edit Mark</string>


    <!-- Add a module Page Strings   -->
    <string name="add_module_page_title">Add a Module</string>
    <string name="add_module_page_add_button_description">Add a Module</string>
    <string name="module_name_edit_text_hint">Module Name</string>
    <string name="module_credits_edit_text_hint">Module Credits</string>
    <string name="test">Test</string>
    <string-array name="module_level_spinner_strings">
        <item>Level 5</item>
        <item>Level 6</item>
    </string-array>
    <string-array name="module_credits_spinner_strings">
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="module_level_prompt">Module Level</string>
    <string name="add_module_button_text">Add</string>
    <string name="error_too_many_level_5_modules">You are already registered for the maximum number of level 5 credits.</string>
    <string name="error_too_many_level_6_modules">You are already registered for the maximum number of level 6 credits.</string>
    <string name="no_module_name_error">Please enter a module name</string>
    <string name="no_credits_error">Please select a credits amount</string>
    <string name="no_level_error">Please select a module level</string>

    <!-- Add Mark Page Strings -->
    <string name="edit_module_page_title">Edit Mark</string>
    <string name="edit_module_button_text">Edit Mark</string>
    <string name="edit_module_result_hint">Result (0–100)</string>
    <string name="mark_is_not_a_number">The given value is not a number.</string>
    <string name="mark_is_invalid">The given value not within the range of 0 – 100.</string>

    <!-- Settings Page Strings -->
    <string name="settings_page_description">Universities grade their students differently using 2nd to 3rd year weightings, some will also discount your lowest module if your grade will benefit because of this, adjust these below.</string>
    <string name="settings_page_weighting_prompt_text">2nd : 3rd Year Weighting</string>
    <string name="settings_page_lowest_module_prompt_text">Discount Lowest Module?</string>
    <string name="settings_page_toggle_off_text">40% : 60%</string>
    <string name="settings_page_toggle_on_text">30% : 70%</string>
    <string name="apply_changes_button_text">Apply Changes</string>
    <string name="level_5_text_hint">Level 5 Total Credits</string>
    <string name="level_6_text_hint">Level 6 Total Credits</string>
    <string name="level_5_is_not_a_number">Level 5 credits is not a number.</string>
    <string name="level_6_is_not_a_number">Level 6 credits is not a number.</string>
    <string name="level_5_credits_too_low">Level 5 credits is lower than the total credits of your enrolled modules.</string>
    <string name="level_6_credits_too_low">Level 6 credits is lower than the total credits of your enrolled modules.</string>


    <!-- Login Page Strings -->
    <string name="login_page_image_view_description">Brand Image</string>
    <string name="login_page_logo_description">Brand Logo</string>
    <string name="login_page_title">Login</string>
    <string name="login_page_email_address_edit_text_hint">Email Address</string>
    <string name="login_page_password_edit_text_hint">Password</string>
    <string name="login_page_login_button_text">Login</string>
    <string name="login_page_sign_up_button_text">Sign Up</string>
    <string name="login_page_forgot_password_button_text">Forgot Password?</string>

    <!-- Sign Up Page Strings -->
    <string name="sign_up_page_title">Sign Up</string>
    <string name="sign_up_page_first_name_edit_text_hint">First Name</string>
    <string name="sign_up_page_surname_edit_text_hint">Surname</string>
    <string name="sign_up_page_email_edit_text_hint">Email Address</string>
    <string name="sign_up_page_password_edit_text_hint">Password</string>
    <string name="sign_up_page_confirm_password_edit_text_hint">Confirm Password</string>
    <string name="sign_up_page_sign_up_button_text">Register</string>

    <!--  Auth Login Errors-->
    <string name="err_msg_enter_first_name">Enter your first name.</string>
    <string name="err_msg_enter_surname">Enter your surname.</string>
    <string name="err_msg_enter_email_address">Enter an email address.</string>
    <string name="err_msg_invalid_email_address">Enter a valid email address.</string>
    <string name="err_msg_enter_password">Enter a password.</string>
    <string name="err_msg_confirm_password">Confirm your password.</string>
    <string name="err_msg_password_do_not_match">Passwords don\'t match.</string>
    <string name="success_msg_details_valid">Your details are valid.</string>
    <string name="sign_up_successful">Congrats, account created successfully.</string>

    <!-- Forgot Password Strings   -->
    <string name="forgot_password_title_text">Forgot Password</string>
    <string name="forgot_password_page_abstract">No problem, enter your email address below and we\'ll send you a link to reset it.</string>
    <string name="forgot_password_email_address_tv_hint">Email Address</string>
    <string name="forgot_password_submit_button_text">Submit</string>
    <string name="reset_password_sent">Reset link sent successfully.</string>

    <!-- Insights Page Strings -->
    <string name="insights_page_title">Insights</string>
    <string name="current_level_5_progress">Current Level 5 Mark</string>
    <string name="overall_level_5_progress">Overall Level 5 Mark</string>
    <string name="weighted_level_5_progress">Weighted Level 5 Mark</string>
    <string name="current_level_6_progress">Current Level 6 Mark</string>
    <string name="overall_level_6_progress">Overall Level 6 Mark</string>
    <string name="weighted_level_6_progress">Weighted Level 6 Mark</string>
    <string name="overall_progress">Overall Mark</string>
    <string name="overall_progress_removal">Overall Mark (Lowest Module Removed)</string>
    <string name="lowest_scoring_module">Lowest Module</string>
    <string name="credits_zero_progress">0</string>
    <string name="level_5_credit_progress">Level 5 Credits Received</string>
    <string name="level_6_credit_progress">Level 6 Credits Received</string>
    <string name="insights_page_grading_text">Grade</string>
    <string name="fail">Fail</string>
    <string name="pass">Pass</string>
    <string name="third">3rd</string>
    <string name="two_two">2 : 2</string>
    <string name="two_one">2 : 1</string>
    <string name="first">1st</string>
    <string name="users_insights">\'s Insights</string>
    <string name="no_insights_text">No Insights to show, please register some module results.</string>

    <!-- Progress Wheel Strings -->
    <string name="please_wait">Please Wait…</string>
    <string name="retrieving_modules">Fetching Modules…</string>
</resources>