<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.university.gradetrak.ui.editModule.EditModuleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editModule.EditModuleActivity"
        android:elevation="0dp"
        android:background="?attr/colorSurface">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_edit_module_page"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
            android:background="?attr/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_module_page_title"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_edit_module_page"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_add_result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin_top"
                android:layout_marginBottom="@dimen/et_margin_bottom"
                android:paddingTop="20dp"
                android:textAllCaps="true"
                android:paddingBottom="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@={viewModel.moduleName}"
                style="@style/TextAppearance.MyTheme.Headline5"
                android:gravity="center"
                android:background="@drawable/brand_image"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_module_result"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin_top"
                android:layout_marginBottom="@dimen/et_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_module_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_module_result_hint"
                    android:inputType="text"
                    android:text="@={viewModel.moduleResult}"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body1" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_module_button_text"
                style="@style/Button.DuckEgg"
                android:onClick="@{() -> viewModel.handleEditButtonClick()}"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>